<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Lazy Stamp</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>

    <!-- fragment_title -->
    <string name="title">Lazy Stamp</string>
    <string name="save">save</string>
    <string name="share">share</string>
    <string name="done">done</string>


    <!-- fragment_bottom -->
    <string name="bottom">by Veckon_md</string>

    <!-- activity_main -->
    <string name="btn_load_image">Load your Pictures</string>
    <string name="btn_load_multi_image">Load multi pictures</string>
    <string name="btn_load_camera">Take a picture</string>

    <!-- popup -->
    <string name="popup_load_image_single">A picture loading</string>
    <string name="popup_load_image_multi">Multi-pictures loading</string>
    <string name="select_single">Load a picture</string>
    <string name="select_multi">Load Multi-pictures</string>
    <string name="popup_title">Select picture mode</string>

    <string-array name="image_type">
        <item>@string/select_single</item>
        <item>@string/select_multi</item>
    </string-array>

    <string name="cancel">cancel</string>
    <string name="btn_cancel">cancel</string>
    <string name="title_activity_make_image">MakeImage</string>

    <!-- fragment_tools -->
    <string name="btn_font">Font</string>
    <string name="btn_size">Size</string>
    <string name="btn_bold">bold</string>
    <string name="btn_transparency">Transparency</string>
    <string name="btn_location">Location</string>
    <string name="btn_text">Text</string>
    <string name="btn_save">Save</string>
    <string name="btn_setting">Setting</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_color">Color</string>
    <string name="title_activity_make">MakeActivity</string>
    <string name="textToolAlert">The text is empty.</string>
    <string name="dot">*</string>


    <!-- activity save -->
    <string name="btn_save_local">SAVE</string>
    <string name="txt_save_local">Gallery</string>
    <string name="btn_share_fb">SHARE</string>
    <string name="txt_share_fb">Facebook</string>
    <string name="btn_share_ks">SHARE</string>
    <string name="txt_share_ks">Kakao Story</string>
    <string name="btn_share_ig">SHARE</string>
    <string name="txt_share_ig">Instagram</string>
    <string name="title_activity_gallery">GalleryActivity</string>

    <!-- toast -->
    <string name="toast_save">saved</string>

    <!-- gallery -->
    <string name="btn_ok">OK</string>
    <string name="btn_pick">Pick From Gallery</string>
    <string name="btn_pick_mul">Pick From Gallery (Multiple)</string>

    <string name="action_ok">OK</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.]]></string>
    <string name="title_template_step">Step <xliff:g id="step_number">%1$d</xliff:g>: Lorem
        Ipsum</string>
</resources>
