<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/bg">

    <include layout="@layout/fragment_title"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:background="@color/LightBlue"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/gallery_icon"
            android:id="@+id/ic_save_local"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:id="@+id/txt_save_local"
            android:text="@string/txt_save_local"
            android:textSize="11pt"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btn_save_local"
            android:text="@string/btn_save_local"
            android:onClick="onClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:background="@color/LightBlue"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/facebook_icon"
            android:id="@+id/ic_share_fb"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:id="@+id/txt_share_fb"
            android:text="@string/txt_share_fb"
            android:textSize="11pt"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btn_share_fb"
            android:text="@string/btn_share_fb"
            android:onClick="onClick"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:background="@color/LightBlue"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/kakaostory_icon"
            android:id="@+id/ic_share_ks"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:id="@+id/txt_share_ks"
            android:text="@string/txt_share_ks"
            android:textSize="11pt"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btn_share_ks"
            android:text="@string/btn_share_ks"
            android:onClick="onClick"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:background="@color/LightBlue"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/instagram_icon"
            android:id="@+id/ic_share_ig"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:id="@+id/txt_share_ig"
            android:text="@string/txt_share_ig"
            android:textSize="11pt"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btn_share_ig"
            android:text="@string/btn_share_ig"
            android:onClick="onClick"/>
    </LinearLayout>

</LinearLayout>